tests/paczka1/fuzzy1/27102735.err
Error in line 2: prkbdbFI A35 53,2
Error in line 10: wiFzbF S479 95,0
Error in line 19: prkbdbFI A35 81,6
Error in line 9: bKQz S479 3,1
Error in line 30: wiFzbF S479 01,6
Error in line 33: pDV S751 64,2
